<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#E0F7FA">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indexPageHeading"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginBottom="35dp"
        android:textColor="#006064"/>

    <Button
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:text="@string/btnTxtSpotify"
        android:id="@+id/btnSpotify"
        android:background="#4DD0E1"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"

         />

    <Button
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:text="@string/btnTxtScores"
        android:id="@+id/btnScores"
        android:background="#4DD0E1"

        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:text="@string/btnTxtLibrary"
        android:id="@+id/btnLibrary"
        android:background="#4DD0E1"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
         />

    <Button
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:text="@string/btnTxtBuit"
        android:id="@+id/btnBuild"
        android:background="#4DD0E1"

        android:layout_gravity="center_horizontal"

        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:text="@string/btnTxtXYZ"
        android:id="@+id/btnXYZ"
        android:background="#4DD0E1"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
         />

    <Button
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:text="@string/btnTxtCapstone"
        android:id="@+id/btnCapstone"
        android:background="#006064"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF" />


    </LinearLayout>